# nightjar

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  example.conf  example.service  pyproject.toml
daemon/: agent_router.py  auth.py  cc_executor.py  compose_reply_mcp.py  compose_reply_smoke.py  config.py  config_inspect.py  config_writer.py  contacts_loader.py  contacts_migrator.py  contacts_writer.py  cost_guard.py  dmarc.py  executor.py  inbox_watcher.py  log.py  main.py  notes_store.py  notifier.py  principal_agent.py  principal_commands.py  principal_handlers.py  principal_interpret.py  render_markdown_mcp.py  revive.py  scope_classifier.py  secret_box.py  send_cli.py  setup_auth.py  setup_totp.py  state.py  status_report.py  system_load.py  test_notify.py  triage.py
docs/: agent-defer-when-busy.md  agent-suggestions-2026-05-09.md  agent-suggestions-backlog.md  automated-testing.md  redteam-harness-spec.md  redteam-loop-brief.md  redteam-loop-prompt.md  render-markdown-mcp.md
prompts/: common.md  principal_interpret.md  triage_default.md
tests/: conftest.py  test_agent_continuation_regression.py  test_agent_defer.py  test_agent_identity.py  test_agent_router.py  test_auth.py  test_catchup_dedup.py  test_cc_executor.py  test_compose_reply_mcp.py  test_config.py  test_config_inspect.py  test_config_writer.py  test_contacts_loader.py  test_contacts_migrator.py  test_contacts_writer.py  test_cost_guard.py  test_dmarc.py  test_executor.py  test_idle_poll_backstop.py  test_inbox_watcher.py  test_llm_per_site.py  test_notes_store.py  test_notifier.py  test_principal_agent.py  test_principal_commands.py  test_principal_interpret.py  test_redteam_step7.py  test_render_markdown_mcp.py  test_scope_classifier.py  test_secret_box.py  test_send_agent_reply.py  test_setup_auth.py  test_sim_harness.py  (+5 more)
(+4 files in other folders)
