[project]
name = "nightjar"
version = "0.1.0"
description = "Self-hosted email assistant. See DESIGN.md."
requires-python = ">=3.13"
dependencies = [
    "aioimaplib>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["daemon*", "tools*"]
exclude = ["tests*", "contacts*"]
