[project]
name = "nightjar"
version = "1.0.0"
description = "Self-hosted email assistant. See DESIGN.md."
requires-python = ">=3.13"
dependencies = [
    "aioimaplib>=2.0.0",
    "anthropic>=0.40.0",
    # inkmd: pure-Python markdown -> PDF compiler.
    # Used by daemon/render_markdown_mcp.py for the PDF format.
    # Not yet on PyPI (v0.1.0 unreleased); install editable from a
    # local checkout: pip install -e ~/inkmd. Bump to a real version
    # pin (e.g. "inkmd>=0.1") once published.
    "inkmd",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["daemon*", "tools*"]
exclude = ["tests*", "contacts*"]
